fixing comment form bug where the bottom of the box didn't show on firefox or safari

--- a/sloshedfilms.com/web/scss/views/subtemplates/desktop/dc-comment-form-desktop.scss
+++ b/sloshedfilms.com/web/scss/views/subtemplates/desktop/dc-comment-form-desktop.scss
@@ -54,9 +54,10 @@ $easing: ease-in-out;
   bottom: 0px;
   border: 1px solid $dc-light-gray;
   margin: $inputPaddingTop  0px 0px;
-  height: 110px;
+  height: 111px;
   @include transition(height $time $easing);
   will-change: height;
+  background-color: $dc-white;
   .dc-text-input-container{
     padding: 0px;
     &.show-placeholder{
